--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </main>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.0/mapbox-gl.js"></script>
     <script>
-      mapboxgl.accessToken =
-        "pk.eyJ1IjoiaWFuanVzdGluZmVycmlzIiwiYSI6ImNsMXUzdWFrdjI5YzEzY3BjcTN2bHdxcXkifQ.nHDp49alvjpiTFbRUmWL0Q";
-      var map = new mapboxgl.Map({
-        container: "map",
-        style: "mapbox://styles/mapbox/streets-v11",
-      });
+      //   mapboxgl.accessToken =
+      //     "pk.eyJ1IjoiaWFuanVzdGluZmVycmlzIiwiYSI6ImNsMXUzdWFrdjI5YzEzY3BjcTN2bHdxcXkifQ.nHDp49alvjpiTFbRUmWL0Q";
+      //   var map = new mapboxgl.Map({
+      //     container: "map",
+      //     style: "mapbox://styles/mapbox/streets-v11",
+      //   });
     </script>
     <script src="script.js"></script>
   </body>
