--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.8.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Map Box Testing</title>
   </head>
   <body>
     <main class="container">
-      <div id="map" style="width: 800px; height: 800px"></div>
+      <div id="map" style="width: 1500px; height: 800px"></div>
     </main>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.0/mapbox-gl.js"></script>
     <script src="script.js"></script>
